Fixed footer widget spacing.

--- a/css/editor-style.css
+++ b/css/editor-style.css
@@ -9992,6 +9992,8 @@ figure {
   padding-top: 112px;
   padding-bottom: 90px;
   color: #495057; }
+  #wrapper-footer-full .row, #wrapper-footer-full .nav-links, #wrapper-footer-full .single .entry-meta, .single #wrapper-footer-full .entry-meta, #wrapper-footer-full .top-search {
+    justify-content: space-between; }
   #wrapper-footer-full .widget-1 {
     margin-bottom: 2em; }
     @media screen and (min-width: 640px) {
