--- a/sass/theme/_footer.scss
+++ b/sass/theme/_footer.scss
@@ -4,6 +4,10 @@
 
   color: $color__text-light;
 
+  .row {
+    justify-content: space-between;
+  }
+
   .widget-1 {
     @extend .col-md-4;
     margin-bottom: 2em;
@@ -14,7 +18,6 @@
   }
   .widget-2 {
     @extend .col-md-4;
-    @extend .offset-md-4 !optional;
   }
   .widget-3 {
     @extend .col-md-4;
